# ZKWatch

./: .env.example  .npmrc  AGENT_ECOSYSTEM_IMPLEMENTATION_REPORT.md  DEPLOYMENT.md  FEATURE_COMPLETENESS_REPORT.md  FINAL_DELIVERY_REPORT.md  README.md  next.config.js  next.config.mjs  package.json  pnpm-lock.yaml  test-comprehensive-improvements.md  test-progress.md
Backend/rust/: Cargo.toml
Backend/rust/src/: analytics.rs  main.rs  zk_proofs.rs
Backend/scripts/: setup.sh
Backend/supabase/functions/agent-deployment/: index.ts
Backend/supabase/functions/alert-processor/: index.ts
Backend/supabase/functions/analytics-engine/: index.ts
Backend/supabase/functions/whale-scanner/: index.ts
app/: globals.css  layout.tsx  page.tsx
app/agents/: page.tsx
app/agents/[id]/: AgentDetailClient.tsx  page.tsx
app/auth/callback/: page.tsx
app/dashboard/: page.tsx
app/deploy/: page.tsx
app/login/: page.tsx
app/monitoring/: page.tsx
app/portfolio/: page.tsx
app/register/: page.tsx
app/settings/: page.tsx
components/: InteractiveBackground.tsx  Navigation.tsx  ProtectedRoute.tsx
lib/: AuthContext.tsx  hooks.ts  mockData.ts  supabase.ts  utils.ts  web3Provider.tsx
rust/src/: blockchain.rs  lib.rs  whale_tracker.rs
scripts/: deploy.sh  monitor.sh
supabase/functions/agent-deployment/: index.ts
supabase/functions/whale-scanner/: index.ts
types/: index.ts
