[package]
name = "zkwatch-core"
version = "0.1.0"
edition = "2021"
authors = ["ZKWatch Team <team@zkwatch.ai>"]
description = "Core cryptographic and blockchain analytics engine for ZKWatch"

[dependencies]
# Cryptographic libraries
blake2s = "0.8"
bulletproofs = "1.2"
curve25519-dalek = "4.0"
merlin = "1.0"
rand = "0.8"
ring = "0.17"
secp256k1 = { version = "0.27", features = ["recovery"] }
sha2 = "0.10"

# Ethereum and blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Analytics and computation
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
polars = "0.35"

# ZK-Proof specific
bulletproofs-plus = "1.1"
group-hash = "1.0"
zkp = "2.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"